--- a/docs/estilo.css
+++ b/docs/estilo.css
@@ -91,7 +91,8 @@ a:hover {
 .logo-grupo {
       display: block;
       margin: 24px auto 0 auto;
-      width: 80px;
+      width: 60px;
+      max-width: 20%;
 }
 
 /* Responsive */
