--- a/docs/estilo.css
+++ b/docs/estilo.css
@@ -88,11 +88,17 @@ a:hover {
   text-decoration: none;
 }
 
+.posicion-logo {
+  position: relative;
+}
+
 .logo-grupo {
-      display: block;
-      margin: 24px auto 0 auto;
-      width: 60px;
-      max-width: 20%;
+  position: absolute;
+  right: 24px;
+  bottom: 24px;
+  width: 90px;      /* Más grande */
+  max-width: 28%;
+  margin: 0;
 }
 
 /* Responsive */
