--- a/docs/estilo.css
+++ b/docs/estilo.css
@@ -82,7 +82,7 @@ footer {
   justify-content: space-between; /* texto a la izquierda, logo a la derecha */
   align-items: center;
   padding: 16px;
-  background-color: #fff; /* o el color que uses */
+  background-color: white; /* o el color que uses */
 }
 
 .footer-grupo p {
